Changed README.md for inline demo

--- a/pd-bubble.html
+++ b/pd-bubble.html
@@ -76,8 +76,9 @@ padding: 0;
 }	
 </style>
 </head>
-</body>
+<body>
 <pd-bubble speakit="true" delay="3000" text=""></pd-bubble>
+<script src="node_modules/@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
 <script type="module" src="pd-bubble.js"></script>
 <script type="text/javascript">
 customElements.whenDefined('pd-bubble').then(() => {
