--- a/pd-bubble.html
+++ b/pd-bubble.html
@@ -5,53 +5,6 @@
 <title>HTML5 Test Page</title>
 <meta name="description" content="HTML5 Custom Web Element Test Page">
 <meta name="author" content="Peter Darmis">
-<style id="bubble-icons">
-@font-face { 
-font-family: 'bubble-icons';
-src: url('fonts/bubble-icons.eot');
-src: url('fonts/bubble-icons.eot?#iefix') format('embedded-opentype'), url('fonts/bubble-icons.woff2') format('woff2'), url('fonts/bubble-icons.woff') format('woff'), url('fonts/bubble-icons.ttf')  format('truetype'), url('fonts/bubble-icons.svg#bubble-icons') format('svg');
-font-weight: normal; 
-font-style: normal; 
-font-display: block; 
-}
-.bubble-icon { 
-font-family: 'bubble-icons' !important; 
-speak: none; 
-font-style: normal; 
-font-weight: normal; 
-font-variant: normal; 
-text-transform: none; 
-line-height: 1; 
--webkit-font-smoothing: antialiased; 
--moz-osx-font-smoothing: grayscale; 
-} 
-.bubble-warning::before { 
-content: '\e900'; 
-} 
-.bubble-forbidden::before { 
-content: '\e901'; 
-} 
-.bubble-error::before {  
-content: '\e902'; 
-} 
-.bubble-info::before {  
-content: '\e903'; 
-} 
-.bubble-help::before {  
-content: '\e904'; 
-} 
-.bubble-success::before {  
-content: '\e905'; 
-}
-.bubble-warning.bubble-mic::before,
-.bubble-forbidden.bubble-mic::before,
-.bubble-error.bubble-mic::before,
-.bubble-info.bubble-mic::before,
-.bubble-help.bubble-mic::before,
-.bubble-success.bubble-mic::before { 
-content: '\e906'; 
-}
-</style>
 <style>
 body {
 width: 100%;
@@ -92,8 +45,10 @@ customElements.whenDefined('pd-bubble').then(() => {
   document.querySelector("pd-bubble:defined").setAttribute("text","info#: Bubble container for an \"Info\" message.");
   document.querySelector("pd-bubble:defined").setAttribute("delay",100);
   document.querySelector("pd-bubble:defined").setAttribute("speakit",true);
-  document.querySelector("pd-bubble:defined").setAttribute("text","help#: Bubble container for a \"Help\" message.");
+  document.querySelector("pd-bubble:defined").setAttribute("text","bookmark#: Bubble container for a \"Bookmark\" message.");
   document.querySelector("pd-bubble:defined").setAttribute("text","success#: Bubble container for a \"Success\" message.");
+  document.querySelector("pd-bubble:defined").setAttribute("text","tag#: Bubble container for a \"Tag\" message.");
+  document.querySelector("pd-bubble:defined").setAttribute("text","mail#: Bubble container for a \"Email\" message.");
 });
 
 </script>
